--- a/Built_in_Functions/Built-in.ipynb
+++ b/Built_in_Functions/Built-in.ipynb
@@ -33,6 +33,103 @@
   },
   {
    "source": [
+    "<h2><font color=#00BFFF>f'' / .format()</font></h2>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "----> Hello World! <----\n----> Hello World! <----\n"
+     ]
+    }
+   ],
+   "source": [
+    "# antes da versão 3.6 \n",
+    "a = ('Hello World!')\n",
+    "print('----> {} <----'.format(a))\n",
+    "\n",
+    "# ou f''\n",
+    "print(f'----> {a} <----')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "O José tem 23 anos e ganha R$987.30.\nO --------José-------- tem 23 anos e ganha R$987.30.\nO José---------------- tem 23 anos e ganha R$987.30.\nO ----------------José tem 23 anos e ganha R$987.30.\nO José tem 23 anos e ganha R$987.30.\nO José tem 23 anos.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nome = 'José'\n",
+    "idade = 23\n",
+    "salario = 987.30\n",
+    "print(f'O {nome} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
+    "print(f'O {nome:-^20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
+    "print(f'O {nome:-<20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
+    "print(f'O {nome:->20} tem {idade} anos e ganha R${salario:.2f}.') #Python 3.6+\n",
+    "print('O {} tem {} anos e ganha R${:.2f}.'.format(nome, idade, salario)) #Python 3\n",
+    "print('O %s tem %d anos.' % (nome, idade)) #Python 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "--------------120.00\n-------10.10--------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# formatação de traços + casas decimais\n",
+    "vlr = 120\n",
+    "vlr2 = 10.1\n",
+    "print(f'{vlr:->20.2f}')\n",
+    "print(f'{vlr2:-^20.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "O 0º valor recebido é \t R$1000,00\nAgora sem o tab\nO 0º valor recebido é R$1000,00\n-----------------------------------\nO 1º valor recebido é \t R$1000,00\nAgora sem o tab\nO 1º valor recebido é R$1000,00\n-----------------------------------\nO 2º valor recebido é \t R$1000,00\nAgora sem o tab\nO 2º valor recebido é R$1000,00\n-----------------------------------\nO 3º valor recebido é \t R$1000,00\nAgora sem o tab\nO 3º valor recebido é R$1000,00\n-----------------------------------\nO 4º valor recebido é \t R$1000,00\nAgora sem o tab\nO 4º valor recebido é R$1000,00\n-----------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# formatação com tab \\t\n",
+    "for c in range(0,5):\n",
+    "    print(f'O {c}º valor recebido é \\t R$1000,00')\n",
+    "    print('Agora sem o tab')\n",
+    "    print(f'O {c}º valor recebido é R$1000,00')\n",
+    "    print('-' * 35)"
+   ]
+  },
+  {
+   "source": [
     "<h2><font color=#00BFFF>print()</font></h2>"
    ],
    "cell_type": "markdown",
