add função round()

--- a/Built_in_Functions/Built-in.ipynb
+++ b/Built_in_Functions/Built-in.ipynb
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--------------120.00\n-------10.10--------\n"
+      "--------------120.00\n-------10.10--------\nR$120.00\nR$120.00\nR$ 120.00\nR$  120.00\nR$00120.00\nR$00120.0000\nR$0000000120\nR$0120\nR$ 120\n"
      ]
     }
    ],
@@ -103,7 +103,16 @@
     "vlr = 120\n",
     "vlr2 = 10.1\n",
     "print(f'{vlr:->20.2f}')\n",
-    "print(f'{vlr2:-^20.2f}')"
+    "print(f'{vlr2:-^20.2f}')\n",
+    "print(f'R${vlr:5.2f}')\n",
+    "print(f'R${vlr:6.2f}')\n",
+    "print(f'R${vlr:7.2f}')\n",
+    "print(f'R${vlr:8.2f}')\n",
+    "print(f'R${vlr:08.2f}')\n",
+    "print(f'R${vlr:010.4f}') # f para float\n",
+    "print(f'R${vlr:010d}')# d para inteiros\n",
+    "print(f'R${vlr:04d}')\n",
+    "print(f'R${vlr:4d}')"
    ]
   },
   {
@@ -252,6 +261,34 @@
    ],
    "source": [
     "print(\"Brasil\", \"ganhou\", 5, \"titulos mundiais\", sep=\"-\")"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>round()</font></h2>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3.14"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "# Retorna o valor com arredondamento\n",
+    "round(3.14151922,2)"
    ]
   }
  ]
