add função bool()

--- a/Built_in_Functions/Built-in.ipynb
+++ b/Built_in_Functions/Built-in.ipynb
@@ -33,6 +33,40 @@
   },
   {
    "source": [
+    "<h2><font color=#00BFFF>bool()</font></h2>\n",
+    "Valores vazios ou zeros são considerado False, do contrário são considerados True (Truth Value Testing).\n",
+    "\n",
+    "\"Truth Value Testing\". Isto é, decidir quando um valor é considerado True ou False"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "False\nFalse\nFalse\nTrue\nTrue\nTrue\nTrue\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bool(0))\n",
+    "print(bool(\"\"))\n",
+    "print(bool(None))\n",
+    "print(bool(1))\n",
+    "print(bool(-100))\n",
+    "print(bool(13.5))\n",
+    "print(bool(\"teste\"))\n",
+    "print(bool(True))"
+   ]
+  },
+  {
+   "source": [
     "<h2><font color=#00BFFF>f'' / .format()</font></h2>"
    ],
    "cell_type": "markdown",
@@ -117,6 +151,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "n1 =    100\nn1 = 000100\nn2 = 000001\nn2 =      1\nn3 = 00.758\nn4 = 15.770 ou 15.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1, n2, n3, n4 = 100, 1, 00.758, 15.77\n",
+    "\n",
+    "print(f'n1 = {n1:6}\\nn1 = {n1:06}') # total de casas = 6 com opção de colocar ou não zero\n",
+    "print(f'n2 = {n2:06}')\n",
+    "print(f'n2 = {n2: 6}')\n",
+    "print(f'n3 = {n3:06.3f}') # variavel + ':' + total de casas decimais + '.' + casas decimais a direita da ','\n",
+    "print(f'n4 = {n4:06.3f} ou {n4:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -139,7 +196,12 @@
   },
   {
    "source": [
-    "<h2><font color=#00BFFF>print()</font></h2>"
+    "<h2><font color=#00BFFF>print()</font></h2>\n",
+    "value é o valor que queremos imprimir, as reticências indicam que a função pode receber mais de um valor, basta separá-los por vírgula.\n",
+    "\n",
+    "sep é o separador entre os valores, por padrão o separador é um espaço em branco.\n",
+    "\n",
+    "end é o que acontecerá ao final da função, por padrão há uma quebra de linha, uma nova linha (\\n). "
    ],
    "cell_type": "markdown",
    "metadata": {}
