add formula/método .find() .rfind

--- a/Built_in_Functions/Built-in.ipynb
+++ b/Built_in_Functions/Built-in.ipynb
@@ -196,6 +196,32 @@
   },
   {
    "source": [
+    "<h2><font color=#00BFFF>.find() .rfind</font></h2>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\nA letra \"o\" aparece a ultima vez na posição 22.\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = '  Curso em Vídeo Python  '\n",
+    "print(frase.find('Curso'))\n",
+    "print('A letra \"o\" aparece a ultima vez na posição {}.'.format(frase.lower().rfind('o')+1))"
+   ]
+  },
+  {
+   "source": [
     "<h2><font color=#00BFFF>print()</font></h2>\n",
     "value é o valor que queremos imprimir, as reticências indicam que a função pode receber mais de um valor, basta separá-los por vírgula.\n",
     "\n",
