--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -26,7 +26,9 @@
  "cells": [
   {
    "source": [
-    "<h1><font color=#32CD32>Lists and Lists Comprehensions</font></h1>"
+    "<h1><font color=#32CD32>Lists and Lists Comprehensions</font></h1>\n",
+    "\n",
+    "As listas são variáveis compostas que permitem armazenar vários valores em uma mesma estrutura, acessíveis por chaves individuais."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +58,553 @@
     "from rich import inspect\n",
     "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
     "inspect(frutas, methods=True)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.append()</font></h3>\n",
+    "\n",
+    "Conseguimos adicionar elementos no final da lista com append"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n['maçã', 'banana', 'laranja', 'melancia', 'morango']\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "frutas.append('morango')\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.clear()</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "frutas.clear()\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.count()</font></h3>\n",
+    "Um jeito fácil de contar o número de ocorrências de um determinado elemento em uma lista é a função .count() das listas"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Existe 3 zeros na lista valores\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores = [ 0, 0, 0, 1, 2, 3, 4]\n",
+    "print(f'Existe {valores.count(0)} zeros na lista valores')"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.index()</font></h3>\n",
+    "Uma outra função que pode ser bastante útil é a função .index(), que nos retorna o índice da primeira ocorrência de um determinado elemento em uma lista"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = ['Banana', 'Morango', 'Maçã', 'Uva', 'Maçã', 'Uva']\n",
+    "print(frutas.index('Uva'))\n",
+    "# O código acima nos retorna 3, pois é o índice da primeira ocorrência do elemento 'Uva' na lista frutas (lembre-se nas listas começamos a contar do índice 0)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "'Manga' is not in list",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-51-fadf2a9b1ad6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfrutas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Banana'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Morango'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Maçã'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Uva'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Maçã'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Uva'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfrutas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Manga'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# Só tome cuidado quando utilizar a função .index(), pois a mesma pode retornar um erro caso você tente buscar pelo índice de um elemento que não existe. Veja o caso abaixo:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: 'Manga' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = ['Banana', 'Morango', 'Maçã', 'Uva', 'Maçã', 'Uva']\n",
+    "print(frutas.index('Manga'))\n",
+    "# Só tome cuidado quando utilizar a função .index(), pois a mesma pode retornar um erro caso você tente buscar pelo índice de um elemento que não existe. Veja o caso abaixo:"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.insert()</font></h3>\n",
+    "\n",
+    "coseguimos adicionar elementes em qualquer posição com insert"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n['maçã', 'banana', 'MORANGO', 'laranja', 'melancia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "frutas.insert(2, 'MORANGO')\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.pop() e del</font></h3>\n",
+    "Eliminar itens com pop() del "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n['banana', 'laranja', 'melancia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "del frutas[0] # com del temos que informar a posição do elemento\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n['banana', 'laranja', 'melancia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "frutas.pop(0) # com pop informamos a posição\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n['maçã', 'banana', 'laranja']\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "frutas.pop() # com pop sem informar posição eliminamos o ultimo item da lista\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.remove()</font></h3>\n",
+    "Com remove o item deve existir na lsiat se não gera um erro"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n['banana', 'laranja', 'melancia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "frutas.remove('maçã')\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['maçã', 'banana', 'laranja', 'melancia']\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-37-cb8cfc9e9baa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfrutas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"maçã\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"banana\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"laranja\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"melancia\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfrutas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfrutas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'morango'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfrutas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(frutas)\n",
+    "frutas.remove('morango')\n",
+    "print(frutas)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>.sort()</font></h3>\n",
+    "\n",
+    "Ordenar itens de uma lista"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[8, 10, 2, 5, 1, 2, 11]\n[1, 2, 2, 5, 8, 10, 11]\n[11, 10, 8, 5, 2, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores = [8, 10, 2, 5, 1, 2, 11]\n",
+    "print(valores)\n",
+    "valores.sort() # podemos ordenar usando sort()\n",
+    "print(valores)\n",
+    "valores.sort(reverse=True) # podemos ordenar reversamente com parametro reverse=True\n",
+    "print(valores)"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>Trabalhando com listas</font></h2>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Listas são mutaveis, podemos trocar elementos</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Hamburguer', 'Suco', 'Pizza', 102]\n['Hamburguer', 'Suco', 'Pizza', 'Picolé']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Listas são mutaveis, diferente de Tuplas\n",
+    "lista1 = ['Hamburguer', 'Suco', 'Pizza', 102]\n",
+    "print(lista1)\n",
+    "lista1[3] = 'Picolé' #São mutaveis pode trocar\n",
+    "print(lista1)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Usando in e not in</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "banana esta na lista frutas? True\nbanana esta na lista frutas? False\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(f\"banana esta na lista frutas? {'banana' in frutas}\")\n",
+    "print(f\"banana esta na lista frutas? {'banana' not in frutas}\")"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Usando max, min e len</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "A lista tem total de 4 elementos.\nA primeira fruta em ordem alfabetica é: banana\nA ultima fruta em ordem alfabetica é: melancia\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(f\"A lista tem total de {len(frutas)} elementos.\")\n",
+    "print(f\"A primeira fruta em ordem alfabetica é: {min(frutas)}\")\n",
+    "print(f\"A ultima fruta em ordem alfabetica é: {max(frutas)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "O menor número é : 0.8\nO maior número é: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [100, 1.1, 1.8, 99, 0.8]\n",
+    "print(f\"O menor número é : {min(numeros)}\")\n",
+    "print(f\"O maior número é: {max(numeros)}\")"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Fatiando lista []</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      " Posição frutas[0] = maçã\n Posição frutas[0][1] = a\n"
+     ]
+    }
+   ],
+   "source": [
+    "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
+    "print(f\" Posição frutas[0] = {frutas[0]}\")\n",
+    "print(f\" Posição frutas[0][1] = {frutas[0][1]}\")\n"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Criando lista com range()</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores = list(range(4,11)) # podemos criar uma lista com range\n",
+    "print(valores)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Desempacotando uma lista com for</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4...\n5...\n6...\n7...\n8...\n9...\n10...\n\n\n4...5...6...7...8...9...10...\n\nNa posição: 0 temos o valor 4.\nNa posição: 1 temos o valor 5.\nNa posição: 2 temos o valor 6.\nNa posição: 3 temos o valor 7.\nNa posição: 4 temos o valor 8.\nNa posição: 5 temos o valor 9.\nNa posição: 6 temos o valor 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores = list(range(4,11)) \n",
+    "for v in valores:\n",
+    "    print(f'{v}...') # com for printamos verticalmente\n",
+    "\n",
+    "print('\\n')\n",
+    "for v in valores:    \n",
+    "    print(f'{v}...', end='') # com end='' printamos horizontalmente\n",
+    "\n",
+    "print('\\n')# usamos o \\n somente para ir para outra linha, pois o ultimo print esta com end=''\n",
+    "for x, v in enumerate(valores): # printando com valores de posições usando enumerate\n",
+    "    print(f'Na posição: {x} temos o valor {v}.')"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Forma correta para copiar uma lista com [:]</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Lista A: [2, 3, 8, 7]\nLista B: [2, 3, 8, 7]\n\n\nLista A: [2, 3, 4, 7]\nLista B: [2, 3, 8, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2, 3, 4, 7]\n",
+    "b = a # ATENÇÃO ao igualar uma lista com outra e mudar uma posição em uma automaticamente você muda as duas!\n",
+    "b[2] = 8\n",
+    "print(f'Lista A: {a}')\n",
+    "print(f'Lista B: {b}')\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "c = [2, 3, 4, 7]\n",
+    "d = c[:] #com [:] estou criando uma copia, agora sim se modificar uma lista modifico somente ela.\n",
+    "d[2] = 8\n",
+    "print(f'Lista A: {c}')\n",
+    "print(f'Lista B: {d}')"
    ]
   },
   {
