incluindo segundo elemento no index()

--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -152,21 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "3\n"
+      "3\n5\n"
      ]
     }
    ],
    "source": [
     "frutas = ['Banana', 'Morango', 'Maçã', 'Uva', 'Maçã', 'Uva']\n",
     "print(frutas.index('Uva'))\n",
-    "# O código acima nos retorna 3, pois é o índice da primeira ocorrência do elemento 'Uva' na lista frutas (lembre-se nas listas começamos a contar do índice 0)."
+    "# O código acima nos retorna 3, pois é o índice da primeira ocorrência do elemento 'Uva' na lista frutas (lembre-se nas listas começamos a contar do índice 0).\n",
+    "print(frutas.index('Uva', 4)) # o segundo argumento é onde ele vai começar procurar"
    ]
   },
   {
