mais exemplos de fatiamento

--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -496,21 +496,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      " Posição frutas[0] = maçã\n Posição frutas[0][1] = a\n"
+      " Posição frutas[0] = maçã\n Posição frutas[0][1] = a\n Posição frutas[-1] = melancia\n Posição frutas[:2] = ['maçã', 'banana']\n Posição frutas[1:3] = ['banana', 'laranja']\n Posição frutas[0:4:2] = ['maçã', 'laranja']\n"
      ]
     }
    ],
    "source": [
     "frutas = [\"maçã\", \"banana\", \"laranja\", \"melancia\"]\n",
     "print(f\" Posição frutas[0] = {frutas[0]}\")\n",
-    "print(f\" Posição frutas[0][1] = {frutas[0][1]}\")\n"
+    "print(f\" Posição frutas[0][1] = {frutas[0][1]}\")\n",
+    "print(f\" Posição frutas[-1] = {frutas[-1]}\")\n",
+    "print(f\" Posição frutas[:2] = {frutas[:2]}\")# sempre ignora o ultimo\n",
+    "print(f\" Posição frutas[1:3] = {frutas[1:3]}\")\n",
+    "print(f\" Posição frutas[0:4:2] = {frutas[0:4:2]}\")"
    ]
   },
   {
