--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -621,7 +621,8 @@
   },
   {
    "source": [
-    "<h3><font color=#DAA520>lista2 = [fruta.upper() for fruta in frutas]</font></h3>"
+    "<h3><font color=#DAA520>List Comprehensions básica</font></h3>\n",
+    "<h3><font color=#DAA520>[fruta.upper() for fruta in frutas]</font></h3>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -653,7 +654,35 @@
   },
   {
    "source": [
-    "<h3><font color=#DAA520>lista2 = [fruta.upper() for fruta in frutas]</font></h3>"
+    "<h3><font color=#DAA520>List Comprehensions mais operações</font></h3>\n",
+    "<h3><font color=#DAA520>[(n * n) for n in inteiros]</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 9, 16, 25, 49, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inteiros = [1,3,4,5,7,8]\n",
+    "quadrados = [(n * n) for n in inteiros]\n",
+    "print(quadrados)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>List Comprehensions com if</font></h3>\n",
+    "<h3><font color=#DAA520>[numero for numero in inteiros if numero % 2 == 0]</font></h3>"
    ],
    "cell_type": "markdown",
    "metadata": {}
