--- a/Coleções_Python_Iteraveis/Strings.ipynb
+++ b/Coleções_Python_Iteraveis/Strings.ipynb
@@ -60,6 +60,7 @@
   },
   {
    "source": [
+    "<h2><font color=#00BFFF>.find() .rfind</font></h2>\n",
     "<h2><font color=#00BFFF>Buscando um caracter em uma string - .find() .rfind</font></h2>\n",
     "\n",
     "A função find encontra a primeira ocorrência do texto que estamos procurando e devolve o índice. Lembrando também que o índice começa com 0."
@@ -150,6 +151,38 @@
    "source": [
     "frase = '  Curso em Vídeo Python  '\n",
     "print('A letra \"o\" aparece a ultima vez na posição {}.'.format(frase.lower().rfind('o')+1))"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>sort()</font></h2>\n",
+    "<h2><font color=#00BFFF>Usando sort() e ordenando uma lista de strings</font></h2>\n",
+    "sort tem algumas opções que ocasionalmente serão convenientes. Uma delas é a capacidade de passar uma chave de ordenação secundária – isto é, uma função que gera um valor a ser usado para ordenar os objetos. Por exemplo, poderíamos ordenar uma coleção de strings de acordo com seus tamanhos:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n lista b antes do metodo .sort(key=len):\n['saw', 'small', 'He', 'foxes', 'six']\n\nlista b depois do metodo .sort(key=len):\n['He', 'saw', 'six', 'small', 'foxes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = ['saw', 'small', 'He', 'foxes', 'six']\n",
+    "\n",
+    "print(f'\\n lista b antes do metodo .sort(key=len):\\n{b}')\n",
+    "\n",
+    "b.sort(key=len)\n",
+    "\n",
+    "print(f'\\nlista b depois do metodo .sort(key=len):\\n{b}')"
    ]
   },
   {
