--- a/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
+++ b/Coleções_Python_Iteraveis/List_and_Comprehensions.ipynb
@@ -144,6 +144,34 @@
   },
   {
    "source": [
+    "<h3><font color=#DAA520>.extend()</font></h3>\n",
+    "Se você já tiver uma lista definida, poderá concatenar vários elementos a ela utilizando o método extend. Observe que a concatenação de lista por adição é uma operação comparativamente custosa, pois uma nova lista deve ser criada e os objetos devem ser copiados. Usar extend para concatenar elementos em uma lista existente, especialmente se você estiver construindo uma lista grande, em geral é preferível."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 'Livio', 5, 1]\n[1, 2, 'Livio', 5, 1, 'Flavia', 8, (5, 'Arthur')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 'Livio', 5,1]\n",
+    "print(x)\n",
+    "x.extend(['Flavia', 8, (5, 'Arthur')])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "source": [
     "<h3><font color=#DAA520>.index()</font></h3>\n",
     "Uma outra função que pode ser bastante útil é a função .index(), que nos retorna o índice da primeira ocorrência de um determinado elemento em uma lista"
    ],
@@ -197,7 +225,9 @@
    "source": [
     "<h3><font color=#DAA520>.insert()</font></h3>\n",
     "\n",
-    "coseguimos adicionar elementes em qualquer posição com insert"
+    "Ao usar insert, podemos inserir um elemento em um local específico da lista. O índice de inserção deve estar entre 0 e o tamanho da lista, inclusive. \n",
+    "\n",
+    "insert é custosa do ponto de vista de processamento, se comparada com append, pois as referências aos elementos subsequentes têm que ser deslocadas internamente a fim de criar espaço para o novo elemento. Se precisar inserir elementos tanto no início quanto no final de uma sequência, talvez você queira explorar collections.deque, uma fila de dupla extremidade para esse propósito."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -353,7 +383,7 @@
    "source": [
     "<h3><font color=#DAA520>.sort()</font></h3>\n",
     "\n",
-    "Ordenar itens de uma lista"
+    "Você pode ordenar uma lista in-place (sem criar um novo objeto), chamando a sua função sort:"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -417,7 +447,9 @@
   },
   {
    "source": [
-    "<h3><font color=#DAA520>Usando in e not in</font></h3>"
+    "<h3><font color=#DAA520>Usando in e not in</font></h3>\n",
+    "\n",
+    "Verificar se uma lista contém um valor é muito mais lento do que fazer isso com dicionários e conjuntos, pois Python faz uma verificação linear nos valores de lista, enquanto é capaz de verificar os outros tipos (com base em tabelas hash) em um tempo constante."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -614,7 +646,37 @@
   },
   {
    "source": [
-    "<h2><font color=#00BFFF>List Comprehensions</font></h2>"
+    "<h3><font color=#DAA520>Somar duas listas com + as concatena</font></h3>\n",
+    "Observe que a concatenação de lista por adição é uma operação comparativamente custosa, pois uma nova lista deve ser criada e os objetos devem ser copiados. Usar extend para concatenar elementos em uma lista existente, especialmente se você estiver construindo uma lista grande, em geral é preferível."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[4, None, 'foo', 7, 8, (2, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [4, None, 'foo'] + [7, 8, (2, 3)]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>List Comprehensions</font></h2>\n",
+    "List comprehensions (abrangências de lista) são um dos recursos mais amados da linguagem Python. \n",
+    "# Elas permitem que você componha uma nova lista de modo conciso, filtrando os elementos de uma coleção, \n",
+    "# transformando os elementos ao passar o filtro, com uma expressão concisa.A condição de filtro pode \n",
+    "# ser omitida, restando somente a expressão."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -662,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -675,8 +737,28 @@
    ],
    "source": [
     "inteiros = [1,3,4,5,7,8]\n",
-    "quadrados = [(n * n) for n in inteiros]\n",
+    "quadrados = [(n * n) for n in inteiros] # potencia de n para cada n na lista inteiros\n",
     "print(quadrados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[32.0, 50.0, 68.18, 94.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Converter Celsius para Fahrenheit\n",
+    "celsius = [0,10,20.1,34.5]\n",
+    "fahrenheit = [ ((float(9)/5)*temp + 32) for temp in celsius ] # aplicar isso (float(9)/5)*temp + 32 para cada temp na lista celsius\n",
+    "print(fahrenheit)"
    ]
   },
   {
@@ -708,8 +790,84 @@
     "        pares1.append(numero)\n",
     "print(pares1)\n",
     "\n",
-    "pares2 = [ numero for numero in inteiros if numero % 2 == 0]\n",
+    "pares2 = [ numero for numero in inteiros if numero % 2 == 0] # numero para cada numero na lista inteiros SE for par(numero % 2 == 0)\n",
     "print(pares2)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>List Comprehensions aninhadas</font></h3>\n",
+    "<h3><font color=#DAA520>[name for names in all_data for name in names if name.count('e') >= 2]</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Nomes com 2 \"e\", usando for:\n ['Steven']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List comprehensions aninhadas. Suponha que tenhamos uma lista de listas contendo alguns nomes em inglês e em espanhol:\n",
+    "all_data = [['John', 'Emily', 'Michael', 'Mary', 'Steven'], ['Maria', 'Juan', 'Javier', 'Natalia', 'Pilar']]\n",
+    "\n",
+    "# Suponha agora que quiséssemos obter uma única lista contendo todos os nomes com dois ou mais e’s. Certamente poderíamos fazer isso com um laço for simples:\n",
+    "names_of_interest = []\n",
+    "for names in all_data:\n",
+    "    enough_es = [name for name in names if name.count('e') >= 2]\n",
+    "    names_of_interest.extend(enough_es)\n",
+    "    \n",
+    "print('Nomes com 2 \"e\", usando for:\\n', names_of_interest)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\nNomes com 2 \"e\", usando list comprehension aninhada:\n ['Steven']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Na verdade, podemos encapsular toda essa operação em uma única list comprehension aninhada, que terá o seguinte aspecto:\n",
+    "all_data = [['John', 'Emily', 'Michael', 'Mary', 'Steven'], ['Maria', 'Juan', 'Javier', 'Natalia', 'Pilar']]\n",
+    "\n",
+    "result = [name for names in all_data for name in names if name.count('e') >= 2]\n",
+    "\n",
+    "print('\\nNomes com 2 \"e\", usando list comprehension aninhada:\\n', result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 16, 81, 256, 625, 1296, 2401, 4096, 6561, 10000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Operações aninhadas\n",
+    "lst = [ x**2 for x in [x**2 for x in range(11)]] # potencia de x para cada x na lista [potencia de x para cada x no range de 0 a 11]\n",
+    "# basicamente estamos fazendo potencia da potencia em uma lista de 0 a 11. ex: 2**2 = 4**2 = 16 (lst[2])\n",
+    "print(lst)"
    ]
   }
  ]
