add a função __name__

--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -59,6 +59,39 @@
     "print(Circulos.__module__) # __main__ , pois a classe Circulos foi criada no script corrente cujo __name__ é sempre __main__\n",
     "print(sqrt.__module__) # veja como não criamos a classe sqrt o modulo é de onde ela foi criada (math)"
    ]
+  },
+  {
+   "source": [
+    "<h3><font color=#00BFFF>__name__ == __main__</font></h3>\n",
+    "No Python, arquivos .py são chamados de módulos. Cada módulo pode ser executado diretamente, como um programa em si, ou importado por outro módulo.\n",
+    "\n",
+    "Precisamos, de alguma maneira, identificar essa diferença. Para isso, temos uma variável nativa que pode nos auxiliar nisso - a __name__, que nos indica o nome do contexto em que o módulo está rodando.\n",
+    "\n",
+    "Resumindo, a variável __name__ representa o nome do módulo. Entretanto, quando o módulo é executado por si só como um programa, __name__ é definido para ’__main__’, diferente de quando o módulo é importado, no qual o valor fica de fato igual ao nome do módulo."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "__main__\n__main__\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(__name__)\n",
+    "\n",
+    "# Como estamos com arquivo Metodos_especiais.ipynb aberto o __name__ == '__main__'. É boa pratica usarmos esta logica para testarmos nosso codigo, ou seja quando o arquivo for importado o __name__ dele passara a ser chamado de Metodos_especiais e não executará o codigo indentado no if __name__ == '__main__'\n",
+    "if __name__ == '__main__':\n",
+    "    print(__name__)"
+   ]
   }
  ]
 }
