add método especial __srt__

--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -92,6 +92,85 @@
     "if __name__ == '__main__':\n",
     "    print(__name__)"
    ]
+  },
+  {
+   "source": [
+    "<h3><font color=#00BFFF>__str__</font></h3>\n",
+    "\n",
+    "O método __str__()  cria um modo de exibição padrão com print() é usado para retornar uma representação de string de um objeto."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>sem __srt__ </font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Livro criado\n\n<__main__.Livro object at 0x0000012A7A985F40>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Livro():\n",
+    "    def __init__(self, titulo: str, autor: str, paginas: int):\n",
+    "        print (\"Livro criado\\n\")\n",
+    "        self.titulo = titulo\n",
+    "        self.autor = autor\n",
+    "        self.paginas = paginas            \n",
+    "    \n",
+    "    '''def __str__(self): # chama o print(), ou seja tanto faz um ou outro\n",
+    "        return f'Título: {self.titulo} , autor: {self.autor}, páginas: {self.paginas}'''\n",
+    "    \n",
+    "livro1 = Livro(\"Os Lusíadas\", \"Luis de Camões\", 8816)\n",
+    "print(livro1)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>com __srt__ </font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Livro criado\n\nTítulo: Os Lusíadas , autor: Luis de Camões, páginas: 8816\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Livro():\n",
+    "    def __init__(self, titulo: str, autor: str, paginas: int):\n",
+    "        print (\"Livro criado\\n\")\n",
+    "        self.titulo = titulo\n",
+    "        self.autor = autor\n",
+    "        self.paginas = paginas            \n",
+    "    \n",
+    "    def __str__(self): # chama o print(), ou seja tanto faz um ou outro\n",
+    "        return f'Título: {self.titulo} , autor: {self.autor}, páginas: {self.paginas}'\n",
+    "    \n",
+    "livro1 = Livro(\"Os Lusíadas\", \"Luis de Camões\", 8816)\n",
+    "print(livro1)"
+   ]
   }
  ]
 }
