add método especial __class__

--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -33,6 +33,54 @@
   },
   {
    "source": [
+    "<h3><font color=#00BFFF>__class__</font></h3>\n",
+    "O método interno __class__ permite que possamos fazer uma referência a classe atual, permitindo o acesso a informações da mesma.\n",
+    "\n",
+    "Utilizando o ____class____ podemos acessar informações como nome da classe, atributo da classe ou algum método da classe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Conta\nMichael\nchamando um método\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Conta():\n",
+    "  nome: str = \"Michael\" # esse é um atributo da classe\n",
+    "\n",
+    "  def __init__(self, titular: str):\n",
+    "    self.titular = titular # esse é um atributo da instância(objeto)\n",
+    "\n",
+    "  @classmethod\n",
+    "  def metodo(cls): # esse é um método da classe\n",
+    "    return \"chamando um método\"\n",
+    "\n",
+    "# acessando nome da classe\n",
+    "conta = Conta(\"Erick\")\n",
+    "print(conta.__class__.__name__)\n",
+    "\n",
+    "# acessando o atributo de classe 'nome'\n",
+    "print(conta.__class__.nome)\n",
+    "\n",
+    "# acessando um método da classe\n",
+    "print(conta.__class__.metodo())\n",
+    "\n",
+    "# Também podemos utilizar o __class__ para verificar o tipo de uma instância:\n",
+    "print(conta.__class__ == Conta)"
+   ]
+  },
+  {
+   "source": [
     "<h3><font color=#00BFFF>__module__</font></h3>\n",
     "guarda o nome do modulo ao qual a classe pertence."
    ],
