Atributos da instancia Vs atributos da classe

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -68,30 +68,36 @@
   {
    "source": [
     "<h2><font color=#00BFFF>Atributos de uma class</font></h2>\n",
-    "Os atributos são as características que especificam uma classe. Estão na função especial __init__.\n",
+    "Os atributos são as características que especificam uma classe. Estão na função especial __init__ e fora dela.\n",
     "\n",
-    "A função construtora __init__ é uma implícita, que é chamada automaticamente."
+    "A função construtora ____init____ é uma implícita, que é chamada automaticamente.\n",
+    "\n",
+    "<h3><font color=#DAA520>Atributos da instancia(objeto) Vs atributos da classe</font></h3>\n",
+    "\n",
+    "Atributos da instancia estão na função construtora ____init____ ja os atributos da classe estão na classe."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "12\nAna\n"
+      "12\nAna\n3\n"
      ]
     }
    ],
    "source": [
     "class Conta(object):\n",
+    "    # tamanho_numero_conta é um atributo da classe\n",
+    "    tamanho_numero_conta = 3\n",
     "\n",
-    "    # numero e titular são atributos da class Conta\n",
+    "    # numero e titular são atributos da instância(objeto)\n",
     "    def __init__(self, numero: int, titular: str):\n",
     "        self.numero: int = numero\n",
     "        self.titular: str = titular\n",
@@ -99,7 +105,8 @@
     "conta1 = Conta(12, 'Ana')\n",
     "\n",
     "print(conta1.numero)\n",
-    "print(conta1.titular)"
+    "print(conta1.titular)\n",
+    "print(conta1.tamanho_numero_conta)"
    ]
   },
   {
@@ -149,7 +156,9 @@
     "<h3><font color=#DAA520>Acessando atributos __privados com métodos getters - @property</font></h3>\n",
     "O uso do getters são métodos usados apenas para retornar dados de atributos __privados.\n",
     "\n",
-    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters."
+    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters.\n",
+    "\n",
+    "Obs: Usar property é uma ótima prática. Quando criamos getters e setters todos os lugares que já acessam a classe precisam mudar."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -192,11 +201,13 @@
   },
   {
    "source": [
-    "<h3><font color=#DAA520>Modificando atributos __privados com métodos setters - @numero.setter/font></h3>\n",
+    "<h3><font color=#DAA520>Modificando atributos __privados com métodos setters - @numero.setter</font></h3>\n",
     "\n",
     "O uso do setters são métodos usados para modificar os dados de atributos __privados.\n",
     "\n",
-    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters."
+    "Uma solução ao invés de usar get e set no nome das variaveis é usar uma property, A declaração de uma property é feita com o uso do caractere @. @property para getters e @nome da função.setter para setters.\n",
+    "\n",
+    "Obs: Usar property é uma ótima prática. Quando criamos getters e setters todos os lugares que já acessam a classe precisam mudar."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -242,7 +253,9 @@
    "source": [
     "<h2><font color=#00BFFF>Métodos estáticos de uma class - @staticmethod</font></h2>\n",
     "\n",
-    "Todas as linguagens orientadas a objeto trabalham com métodos estáticos, fica inapropriado usar property, porque ele sempre precisa do self. A configuração correta será @staticmethod."
+    "Todas as linguagens orientadas a objeto trabalham com métodos estáticos, fica inapropriado usar property, porque ele sempre precisa do self. A configuração correta será @staticmethod.\n",
+    "\n",
+    "Métodos estáticos tem um cheiro de linguagem procedural já que independe de um objeto para ser chamado e não manipula informações/atributos de objetos. Deve ser usado com bastante cautela!"
    ],
    "cell_type": "markdown",
    "metadata": {}
