add Porque usarmos __class__

--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -81,6 +81,74 @@
   },
   {
    "source": [
+    "<h3><font color=#DAA520>Porque usarmos __class__</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nFalse\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Pessoa():\n",
+    "    tamanho_cpf = 11\n",
+    "\n",
+    "    def __init__(self, cpf, nome):\n",
+    "        self.cpf = cpf\n",
+    "        self.nome = nome\n",
+    "\n",
+    "    def valida_cpf(self):\n",
+    "        return True if len(self.cpf) == __class__.tamanho_cpf else False\n",
+    "\n",
+    "pe = Pessoa('00000000001', 'Ruby')\n",
+    "print(pe.valida_cpf())\n",
+    "\n",
+    "pe = Pessoa('0000000000', 'Cristal')\n",
+    "print(pe.valida_cpf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "11\n12\n11\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''O que acontece é que, caso não exista o atributo tamanho_cpf na instância, o Python busca o atributo na classe. Em seguida, adicionamos um atributo tamanho_cpf na instância e quando dizemos que o valor é 12, o atributo da classe não é alterado, já que são atributos diferentes, um da classe e outro só da instância.'''\n",
+    "\n",
+    "class Pessoa:\n",
+    "    tamanho_cpf = 11\n",
+    "\n",
+    "p = Pessoa()\n",
+    "\n",
+    "print(p.tamanho_cpf)\n",
+    "\n",
+    "p.tamanho_cpf = 12\n",
+    "\n",
+    "print(p.tamanho_cpf)\n",
+    "\n",
+    "print(Pessoa.tamanho_cpf)"
+   ]
+  },
+  {
+   "source": [
     "<h3><font color=#00BFFF>__module__</font></h3>\n",
     "guarda o nome do modulo ao qual a classe pertence."
    ],
