add staticmethod vs classmethod vs self

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -255,21 +255,27 @@
     "\n",
     "Todas as linguagens orientadas a objeto trabalham com métodos estáticos, fica inapropriado usar property, porque ele sempre precisa do self. A configuração correta será @staticmethod.\n",
     "\n",
-    "Métodos estáticos tem um cheiro de linguagem procedural já que independe de um objeto para ser chamado e não manipula informações/atributos de objetos. Deve ser usado com bastante cautela!"
+    "Métodos estáticos tem um cheiro de linguagem procedural já que independe de um objeto para ser chamado e não manipula informações/atributos de objetos. Deve ser usado com bastante cautela!\n",
+    "\n",
+    "Cuidados a tomar...\n",
+    "\n",
+    "Sempre que você usar métodos estáticos em classes que contém herança, observe se não está tentando acessar alguma informação da classe a partir do método estático, pois isso pode dar algumas dores de cabeça pra entender o motivo dos problemas.\n",
+    "\n",
+    "Alguns pythonistas não aconselham o uso do @staticmethod, já que poderia ser substituído por uma simples função no corpo do módulo. Outros mais puristas entendem que os métodos estáticos fazem sentido, sim, e que devem ser vistos como responsabilidade das classes."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "12\n001\n"
+      "12\n001\n001\n"
      ]
     }
    ],
@@ -292,7 +298,114 @@
     "conta1 = Conta(12)\n",
     "\n",
     "print(conta1.numero)\n",
-    "print(conta1.código_banco())"
+    "print(conta1.código_banco())\n",
+    "\n",
+    "# Pode ser chamado sem ser instanciado\n",
+    "print(Conta.código_banco())"
+   ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>Métodos de classe de uma class - @classmethod</font></h2>\n",
+    "\n",
+    "São métodos declarados com @classmethod. Quando criamos um método de classe, temos acesso aos atributos da classe. Da mesma forma com os atributos de classe, podemos acessar estes métodos de dentro dos métodos de instância, a partir de ____class____, se desejarmos.\n",
+    "\n",
+    "O @classmethod permite que você chame o metodo de uma classe sem precisar instânciar a classe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Olá!\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "escreve() missing 1 required positional argument: 'text'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-8065a532cad1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mEscritor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mescreve_novo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Olá!\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Vai executar\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mEscritor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mescreve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Olá!\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Não vai executar\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: escreve() missing 1 required positional argument: 'text'"
+     ]
+    }
+   ],
+   "source": [
+    "class Escritor():\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def escreve(self, text):\n",
+    "        print(text)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def escreve_novo(cls, text):\n",
+    "        print(text)\n",
+    "\n",
+    "Escritor.escreve_novo(\"Olá!\") # Vai executar\n",
+    "Escritor.escreve(\"Olá!\") # Não vai executar"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>staticmethod vs classmethod vs self</font></h3>\n",
+    "\n",
+    "O staticmethod não recebe a classe como referência enquanto o classmethod recebe.\n",
+    "\n",
+    "Podemos usar o classmethod como construtor da nossa classe, recebendo um objeto de outra classe ou até da mesma no staticmethod não.\n",
+    "\n",
+    "Outra coisa é que o uso do @classmethod é mais útil quando usado em herança, já que a classe é levada em consideração. Alguns programadores questionam o uso do @staticmethod (por parecer não ter muita utilidade) e por este motivo é mais comum o uso do @classmethod."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Self - so funciono apos ser instanciado!\n\nstatic_method - funciono sem ser instanciado, mas não acesso nada na classe!\n\nclass_method - funciono sem ser instanciado, é acesso objetos na classe, veja --> <__main__.Teste object at 0x0000025B1402B550>!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Teste:\n",
+    "    def __init__(self, nome):\n",
+    "        self.nome = nome\n",
+    "    \n",
+    "    def test_self(self):\n",
+    "        print('Self - so funciono apos ser instanciado!')\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def static_method():  # não recebe cls\n",
+    "        print('\\nstatic_method - funciono sem ser instanciado, mas não acesso nada na classe!')\n",
+    "\n",
+    "    @classmethod\n",
+    "    def class_method(cls, teste):  # recebe cls\n",
+    "        print(f'\\nclass_method - funciono sem ser instanciado, é acesso objetos na classe, veja --> {cls(teste.nome)}!')\n",
+    "\n",
+    "# self precisamos instanciar uma classe\n",
+    "instancia = Teste('Ana')\n",
+    "instancia.test_self()\n",
+    "\n",
+    "# staticmethod, não precisamos estanciar, mas não conseguimos acessar nenhum objeto da classe.\n",
+    "Teste.static_method()\n",
+    "\n",
+    "# classmethod, não precisamos estanciar, e conseguimos acessar objetos da classe.\n",
+    "Teste.class_method(instancia)"
    ]
   }
  ]
