add uso da superclasse - super()

--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -407,6 +407,98 @@
     "# classmethod, não precisamos estanciar, e conseguimos acessar objetos da classe.\n",
     "Teste.class_method(instancia)"
    ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>Herança</font></h2>\n",
+    "\n",
+    "Herança compartilha codigo com as classes filhas reduzindo a repetição de codigo. Todas as subclasses tem acesso aos métodos criados na superclasse e a herança faz com que o seu código não fique duplicado, reduzindo os pontos de falha."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "O veiculo titan abasteceu com 5 litros\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Veiculo:\n",
+    "    def __init__(self, nome, litros=0):\n",
+    "        self.nome = nome\n",
+    "        self.litros = litros\n",
+    "    \n",
+    "    # o método abastecer é herdado pelas classes Moto e Carro\n",
+    "    def abastecer(self, litros):\n",
+    "        return print(f'O veiculo {self.nome} abasteceu com {litros} litros')\n",
+    "\n",
+    "class Moto(Veiculo):\n",
+    "    pass\n",
+    "\n",
+    "class Carro(Veiculo):\n",
+    "    pass\n",
+    "\n",
+    "# classe Moto herdou atributo nome e método abaster() da classe Veiculo.\n",
+    "carro = Moto('titan')\n",
+    "carro.abastecer(5)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#DAA520>Utilizando a superclasse - super()</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\nNome: Os 300\nAno: 2005\nDuração: 130 min\nDiretor: João\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Programa():  # Super Class\n",
+    "    def __init__(self, nome: str, ano: int, duração: int):\n",
+    "        self._nome = nome.title()\n",
+    "        self.ano = ano\n",
+    "        self.duração = duração\n",
+    "\n",
+    "    def imprimir(self):\n",
+    "        nome: str = f'\\nNome: {self._nome}\\n'\n",
+    "        ano: str = f'Ano: {self.ano}\\n'\n",
+    "        duração: str = f'Duração: {self.duração} min\\n'\n",
+    "        return nome + ano + duração\n",
+    "\n",
+    "class Filme(Programa):\n",
+    "    def __init__(self, nome: str, ano: int, duração: int, diretor: str):\n",
+    "        # com esta ação estamos usando nome, ano e duração da classe mãe Programa\n",
+    "        super().__init__(nome, ano, duração)\n",
+    "        self.diretor = diretor\n",
+    "    \n",
+    "    def dados(self):\n",
+    "        # aqui estamos chamando o metodo imprimir da classe Programa e incluindo a informação diretor. Fazemos isso sem repetir codigo.\n",
+    "        return super().imprimir() + f'Diretor: {self.diretor}'\n",
+    "\n",
+    "filme = Filme('os 300', 2005, 130, 'João')\n",
+    "print(filme.dados())\n",
+    "    "
+   ]
   }
  ]
 }
