--- a/Orientação a Objetos/orientação_a_objetos.ipynb
+++ b/Orientação a Objetos/orientação_a_objetos.ipynb
@@ -499,6 +499,50 @@
     "print(filme.dados())\n",
     "    "
    ]
+  },
+  {
+   "source": [
+    "<h2><font color=#00BFFF>Polimorfismo</font></h2>\n",
+    "\n",
+    "Polimorfismo é quando não importa a classe sendo usada, contanto que esta classe herde de uma superclasse específica. Não precisamos mais verificar o tipo da classe para acessar métodos."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "class Poli_1\nclass Poli_2\nclass Poli_3\nclass Poli_2\nclass Poli_1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Poli_1():\n",
+    "    def imprimir(self):\n",
+    "        return print('class Poli_1')\n",
+    "\n",
+    "class Poli_2():\n",
+    "    def imprimir(self):\n",
+    "        return print('class Poli_2')\n",
+    "\n",
+    "class Poli_3():\n",
+    "    def imprimir(self):\n",
+    "        return print('class Poli_3')\n",
+    "\n",
+    "ob1, ob2, ob3, ob4, ob5 = Poli_1(), Poli_2(), Poli_3(), Poli_2(), Poli_1()\n",
+    "\n",
+    "objetos = [ob1, ob2, ob3, ob4, ob5]\n",
+    "\n",
+    "# exemplo de polimorfismo, o for objeto chama o metodo imprimir de três classes diferentes.\n",
+    "for objeto in objetos:\n",
+    "    objeto.imprimir()\n"
+   ]
   }
  ]
 }
