add método especial __repr__

--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -211,6 +211,76 @@
   },
   {
    "source": [
+    "<h3><font color=#00BFFF>__repr__</font></h3>\n",
+    "\n",
+    "repr () imprime a representação “oficial” de um objeto (significa que usando a representação de string “oficial” podemos reconstruir o objeto). Basicamente repr mostra a linguagem  real da maquina e str mostra a linguagem para o usuário."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2021-06-17 16:23:45.295182\ndatetime.datetime(2021, 6, 17, 16, 23, 45, 295182)\n[datetime.datetime(2021, 6, 17, 16, 23, 45, 295182), 'oi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "today = datetime.datetime.now()\n",
+    "\n",
+    "print(str(today))\n",
+    "\n",
+    "print(repr(today)) \n",
+    "\n",
+    "lista = [today, 'oi']\n",
+    "# em uma lista sempre é mostrato repr\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "10 + i20\nRational 10 - 20\n[Rational 10 - 20, 'oi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Complex:\n",
+    "    def __init__(self, real, imag):\n",
+    "       self.real = real\n",
+    "       self.imag = imag\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "       return f'{self.real} + i{self.imag}' \n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "       return f'Rational {self.real} - {self.imag}' \n",
+    "\n",
+    "t = Complex(10, 20)\n",
+    "\n",
+    "print(str(t))  \n",
+    "print(repr(t))\n",
+    "\n",
+    "lista = [t, 'oi']\n",
+    "# em uma lista sempre é mostrato repr\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "source": [
     "<h3><font color=#00BFFF>__str__</font></h3>\n",
     "\n",
     "O método __str__()  cria um modo de exibição padrão com print() é usado para retornar uma representação de string de um objeto."
