--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -149,6 +149,90 @@
   },
   {
    "source": [
+    "<h3><font color=#00BFFF>__getitem__</font></h3>\n",
+    "\n",
+    "Deve ser aplicado a um objeto iteravel. Basicamente seu funcionamento é: objeto[[1]]"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Serie 300\nSerie 300\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'Lista_programas' object is not subscriptable",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-132d6c1afa52>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m# Se tentarmos acionar diretamente gera um erro:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfim_de_semana\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'Lista_programas' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "class Lista_programas():\n",
+    "    def __init__(self, nome: str, programas: list):\n",
+    "        self.nome = nome\n",
+    "        self.programas = programas\n",
+    "\n",
+    "lista = ['Lupin', 'Serie 300', 'Prison Break']\n",
+    "\n",
+    "fim_de_semana = Lista_programas('Series', lista)\n",
+    "\n",
+    "# O objeto lista tem o método __getitem__ podemos verificar um item atraves de seu indice\n",
+    "print(lista[1])\n",
+    "\n",
+    "# Para ter o mesmo resultado na class Lista_programas teriamos que acessar nossa lista.\n",
+    "print(fim_de_semana.programas[1])\n",
+    "\n",
+    "# Se tentarmos acionar diretamente gera um erro(TypeError: 'Lista_programas' object is not subscriptable):\n",
+    "print(fim_de_semana[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Serie 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Lista_programas():\n",
+    "    def __init__(self, nome: str, programas: list):\n",
+    "        self.nome = nome\n",
+    "        self.programas = programas\n",
+    "   \n",
+    "    def __getitem__(self, indice: int):\n",
+    "        return self.programas[indice] \n",
+    "\n",
+    "\n",
+    "lista = ['Lupin', 'Serie 300', 'Prison Break']\n",
+    "\n",
+    "fim_de_semana = Lista_programas('Series', lista)\n",
+    "\n",
+    "# Agora com o __getitem__ conseguimos acessar nossos objetos passando um indice.  \n",
+    "print(fim_de_semana[1])"
+   ]
+  },
+  {
+   "source": [
     "<h3><font color=#00BFFF>__module__</font></h3>\n",
     "guarda o nome do modulo ao qual a classe pertence."
    ],
@@ -277,6 +361,96 @@
     "lista = [t, 'oi']\n",
     "# em uma lista sempre é mostrato repr\n",
     "print(lista)"
+   ]
+  },
+  {
+   "source": [
+    "<h3><font color=#00BFFF>__setitem__</font></h3>\n",
+    "\n",
+    "Deve ser aplicado a um objeto iteravel. Basicamente seu funcionamento é: objeto[[1]] = 'dados'"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Lista antes:\n['Lupin', 'Serie 300', 'Prison Break']\nLista apos substituição:\n['Lupin', 'Bruchas', 'Prison Break']\n\n['Lupin', 'Bruchas', 'Prison Break']\n\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'Lista_programas' object does not support item assignment",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-d39737f3acf3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;31m# Se tentarmos acionar diretamente gera um erro(TypeError: 'Lista_programas' object is not subscriptable):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m \u001b[0mfim_de_semana\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Bruchas'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfim_de_semana\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprogramas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'Lista_programas' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "class Lista_programas():\n",
+    "    def __init__(self, nome: str, programas: list):\n",
+    "        self.nome = nome\n",
+    "        self.programas = programas\n",
+    "\n",
+    "lista = ['Lupin', 'Serie 300', 'Prison Break']\n",
+    "\n",
+    "fim_de_semana = Lista_programas('Series', lista)\n",
+    "\n",
+    "# O objeto lista tem o método __setitem__ podemos substituir um dado dentro de uma lista através de um indice.\n",
+    "print(f'Lista antes:\\n{lista}')\n",
+    "lista[1] = 'Bruchas'\n",
+    "print(f'Lista apos substituição:\\n{lista}\\n')\n",
+    "\n",
+    "# Para ter o mesmo resultado na class Lista_programas teriamos que acessar nossa lista.\n",
+    "fim_de_semana.programas[1]='Bruchas'\n",
+    "print(f'{fim_de_semana.programas}\\n')\n",
+    "\n",
+    "# Se tentarmos acionar diretamente gera um erro(TypeError: 'Lista_programas' object does not support item assignment):\n",
+    "fim_de_semana[1] = 'Bruchas'\n",
+    "print(fim_de_semana.programas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Lista antes:\n['Lupin', 'Serie 300', 'Prison Break']\n\n['Lupin', 'Bruchas', 'Prison Break']\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Lista_programas():\n",
+    "    def __init__(self, nome: str, programas: list):\n",
+    "        self.nome = nome\n",
+    "        self.programas = programas\n",
+    "    \n",
+    "    def __setitem__(self, indice: int, valor):\n",
+    "        self.programas[indice] = valor\n",
+    "\n",
+    "lista = ['Lupin', 'Serie 300', 'Prison Break']\n",
+    "\n",
+    "fim_de_semana = Lista_programas('Series', lista)\n",
+    "\n",
+    "print(f'Lista antes:\\n{fim_de_semana.programas}\\n')\n",
+    "\n",
+    "# Agora com __setitem__ conseguimos modificar algum dado somente com nossa classe atraves de um indice e um valor.\n",
+    "fim_de_semana[1] = 'Bruchas'\n",
+    "print(fim_de_semana.programas)"
    ]
   },
   {
