--- a/Metodos_especiais.ipynb
+++ b/Metodos_especiais.ipynb
@@ -233,6 +233,87 @@
   },
   {
    "source": [
+    "<h3><font color=#00BFFF>__len__</font></h3>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n3\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "object of type 'Lista_programas' has no len()",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-e338846b1417>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m# Se tentarmos acionar diretamente gera um erro(TypeError: 'Lista_programas' object is not subscriptable):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfim_de_semana\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'Lista_programas' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "class Lista_programas():\n",
+    "    def __init__(self, nome: str, programas: list):\n",
+    "        self.nome = nome\n",
+    "        self.programas = programas\n",
+    "\n",
+    "lista = ['Lupin', 'Serie 300', 'Prison Break']\n",
+    "\n",
+    "fim_de_semana = Lista_programas('Series', lista)\n",
+    "\n",
+    "# O objeto lista tem o método __len__ podemos verificar a quantidade total de itens na lista\n",
+    "print(len(lista))\n",
+    "\n",
+    "# Para ter o mesmo resultado na class Lista_programas teriamos que acessar nossa lista.\n",
+    "print(len(fim_de_semana.programas))\n",
+    "\n",
+    "# Se tentarmos acionar diretamente gera um erro(TypeError: object of type 'Lista_programas' has no len()):\n",
+    "print(len(fim_de_semana))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Lista_programas():\n",
+    "    def __init__(self, nome: str, programas: list):\n",
+    "        self.nome = nome\n",
+    "        self.programas = programas\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.programas)\n",
+    "\n",
+    "lista = ['Lupin', 'Serie 300', 'Prison Break']\n",
+    "\n",
+    "fim_de_semana = Lista_programas('Series', lista)\n",
+    "\n",
+    "# Após a implementação de __len__ na class conseguimos agora verificar o tamanho de itens do objeto diretamente:\n",
+    "print(len(fim_de_semana))"
+   ]
+  },
+  {
+   "source": [
     "<h3><font color=#00BFFF>__module__</font></h3>\n",
     "guarda o nome do modulo ao qual a classe pertence."
    ],
